--- a/README
+++ b/README
@@ -89,7 +89,7 @@ it is necessary to compile the some parts of alu-detect. For this, you need:
 Additional prerequisites include:
 
 - python 2.6+, including modules: argparse, atexit, bisect, functools, itertools,
-    math, operator, scipy, subprocess
+    math, operator, subprocess
 
 - SAMtools
   http://samtools.sourceforge.net/
@@ -116,7 +116,7 @@ Additional prerequisites include:
   http://bowtie-bio.sourceforge.net/bowtie2/index.shtml
   Note: These can be regenerated locally using bowtie2.
 
-- Repeat annotations of the reference genome(s)
+- Repeat annotations of the reference genome(s) (i.e., RepeatMasker .out files)
   http://genome.ucsc.edu/
   Note: These can be regenerated locally using RepeatMasker.
 
