--- a/README
+++ b/README
@@ -27,6 +27,7 @@ Table of Contents
      3.3. Setup a reference
      3.4. Setup a fake reference (optional)
      3.5. Setup list of known novel alus (optional)
+     3.6. Setting up PATH
 
   4. Input Specification
 
@@ -136,7 +137,7 @@ alu-detect package.
 If the package does not contain binaries (e.g. bin/get-regions), it is necessary
 to compile them. For this you need gcc and boost:
 
-$ cd alu-detect
+$ cd <alu-detect-dir>
 $ BOOST=<path-to-boost-headers> make
 
 If boost is already installed in a standard location on your system, you may
@@ -149,10 +150,7 @@ omit setting the BOOST variable.
 For this step you need the paths to all prerequisites listed in Section 2,
 including the RepBase libraries for RepeatMasker. Run:
 
-$ ./setup
-
-This will create the file settings/global which can be sourced to set
-appropriate paths and shell variables.
+$ ./alu-detect setup
 
 
 3.3. Setup a reference
@@ -161,21 +159,26 @@ appropriate paths and shell variables.
 For this step you need: the reference fasta file, bowtie2 indexes for that
 reference, and repeat annotations for that reference. Run, e.g.:
 
-$ ./setup hg18
+$ ./alu-detect setup hg18
 
 This will ask for: the reference fasta file, the prefix of the bowtie2 index
 files (full path minus the .1.bt2 suffix), and a bash regexp (can use wildcards)
 describing the path to the relevant .out files output by RepeatMasker.
 
-To avoid having to enter some of these by hand, set REF_FA, BOWTIE2_INDEX and
-CHROM_FA_OUT variable prior to running setup. E.g. (see NOTE on bash in Section
-8):
+The paths can also be specified on the command line. Type only
 
-$ REF_FA=/data/hg18.fa BOWTIE2_INDEX=/data/bowtie2-index/hg18 \
-CHROM_FA_OUT=/tmp/RepeatMasker-hg18/chr*out ./setup
+$ ./alu-detect setup
 
-This will create the file settings/ref.hg18, which can be sourced to set shell
-variables apropriately.
+for a list of command line options. E.g.:
+
+$ ./alu-detect setup \
+    -f /data/hg18.fa \
+    -x /data/bowtie2-index/hg18 \
+    -o "/tmp/RepeatMasker-hg18/chr*out" \
+    hg18
+
+Note that the regex describing the path to the RepeatMasker .out files
+must be quoted to prevent shell expansion.
 
 
 3.4. Setup a fake reference (optional)
@@ -186,16 +189,16 @@ what this could be used for.
 
 To add a fake reference, run, e.g.:
 
-$ bin/make-fake-ref hg18 fake_hg18
+$ ./alu-detect make-fake-ref hg18 fake_hg18
 
 For this to work, the reference hg18 must have been previously setup as in step
-3 above. make-fake-ref consists of a number of stages which are run one after
+3.3 above. make-fake-ref consists of a number of stages which are run one after
 the other. To avoid the "continue?" prompts, set CONF=a prior to running it. The
 most time-consuming task is running RepeatMasker on the fake reference fasta
 file. To use multiple threads, set the variable NCPU to the desired number of
 threads (it defaults to 4). E.g.:
 
-$ NCPU=30 CONF=a bin/make-fake-ref hg18 fake_hg18
+$ NCPU=30 CONF=a ./alu-detect make-fake-ref hg18 fake_hg18
 
 This program will eventually invoke step 3 automatically, adding fake_hg18 as a
 reference to the alu-detect settings/ folder. Additionally, it also creates
@@ -225,7 +228,7 @@ attempt to lift those annotations over.
 
 If you do not build such a list, and still use filtering using a fake reference,
 the simulation might still work, but the observed precision will be reduced. By
-default, alu-detect looks for filters that achieve precision at least .96 (and
+default, alu-detect looks for filters that achieve precision at least .97 (and
 maximizes recall). Without a list of known novel Alus, you should edit the file
 bin/get-top-filter and reduce the target minimum precision, or else the
 simulation will output no viable filters.
@@ -234,10 +237,32 @@ To get an idea of what precision might be suitable, after running alu-detect on
 the fake reference, try filtering with some reasonable parameters and see what
 you get, e.g.:
 
-$ . <alu-detect-path>/settings/ref.fake_hg15
 $ filter-ref-alu-bp $ALUS_BED <raw-calls-on-fake_hg15> \
  | apply-filter 200 10 200 1100 \
  | TRUTH=<alu-detect-path>/targets.fake_hg15.bed get-prec
+
+
+3.6. Setting up PATH
+--------------------
+
+The main parts of alu-detect (adding/removing a reference, detecting Alus,
+filtering) are accessed through the wrapper program called alu-detect. This
+program detects its own installation directory and sets up an environment
+variable which allows other scripts to locate the data folders associated with
+the current installation. Thus, one can have 2 independent installations of
+alu-detect, one in folder1, one in folder2, with their own data folders. To run
+using a specific copy, specify the path to the alu-detect script (e.g., "$
+folder1/alu-detect detect [...]"), then the alu-detect script in turn sets up
+the PATH for other scripts.
+
+Other scripts part of alu-detect are in the bin/ subfolder of
+<alu-detect-dir>. To ensure those work properly, set PATH, AWKPATH, and
+PYTHONPATH to include <alu-detect-dir>/bin. Make sure AWKPATH and PYTHONPATH are
+exported by your shell. E.g.:
+
+$ PATH=$PATH:<slu-detect-dir>/bin
+$ export AWKPATH=$AWKPATH:<alu-detect-dir>/bin
+$ export PYTHONPATH=$PYTHONPATH:<alu-detect-dir>/bin
 
 
 --------------------------------------------------------------------------------
@@ -284,13 +309,13 @@ There are several types of fastq inputs:
 4.1.a. Unpaired reads:
 
 $ ORIG_UNPAIRED_READS="file1.fq file2.fq" ORIG_READ_GROUPS="rg1 rg2" \
-INPUT_PHRED=33 [...] alu-detect [...]
+INPUT_PHRED=33 [...] ./alu-detect detect [...]
 
 
 4.1.b. Paired reads in single files:
 
 $ ORIG_PAIRED_READS="file1.fq file2.fq" ORIG_READ_GROUPS="rg1 rg2" \
-INPUT_PHRED=33 [...] alu-detect [...]
+INPUT_PHRED=33 [...] ./alu-detect detect [...]
 
 Here, file1.fq contains consecutive reads from each pair:
 
@@ -315,7 +340,7 @@ AAAA
 4.1.c. Paired reads in separate files:
 
 $ ORIG_READS_1="file1.1.fq file2.1.fq" ORIG_READS_2="file1.2.fq file2.2.fq" \
-ORIG_READ_GROUPS="rg1 rg2" INPUT_PHRED=33 [...] alu-detect [...]
+ORIG_READ_GROUPS="rg1 rg2" INPUT_PHRED=33 [...] ./alu-detect detect [...]
 
 Here, file1.1.fq contains:
 
@@ -343,7 +368,7 @@ AAAA
 4.2. Mappings in sam/bam format
 -------------------------------
 
-$ ORIG_MAPPINGS="file1.bam file2.sam.gz" [...] alu-detect [...]
+$ ORIG_MAPPINGS="file1.bam file2.sam.gz" [...] ./alu-detect detect [...]
 
 
 Read groups: Downstream processing steps need information about what read group
@@ -360,7 +385,7 @@ group 2 for file 2, and so on. Files with no corresponding read group will use
 "00" as the default read group. E.g.:
 
 $ ORIG_MAPPINGS="file1.bam file2.sam.gz" ORIG_READ_GROUPS="rg1" \
-[...] alu-detect [...]
+[...] ./alu-detect detect [...]
 
 All reads missing the RG tag from file1.bam will be assigned to the read group
 "rg1", and all reads the RG tag from file2.sam.gz will be assigned the read
@@ -380,7 +405,7 @@ samtools may produce bam files sorted by coordinate, but without the
 variable to a non-empty value. This will cause alu-detect to sort all input
 files by read name, regardless of the contents of the SO tag:
 
-$ ORIG_MAPPINGS="file1.bam file2.sam.gz" RSORT=1 [...] alu-detect [...]
+$ ORIG_MAPPINGS="file1.bam file2.sam.gz" RSORT=1 [...] ./alu-detect detect [...]
 
 
 If DROP_PAIRS_DIFF_CHR is non-empty, paired reads which have the two mates
@@ -394,8 +419,8 @@ such reads, they might fill up the RAM.
 5. Running alu-detect
 --------------------------------------------------------------------------------
 
-alu-detect is a large bash script manipulating the input reads in a series of
-consecutive stages.
+alu-detect detect is a large bash script manipulating the input reads
+in a series of consecutive stages.
 
 Stage 0: Obtain a sam file of the reads mapped to the reference with read pairs
 appearing in consecutive records.
@@ -426,7 +451,7 @@ most RAM.
 
 The syntax for running alu-detect is (also see NOTE on bash in Section 8):
 
-$ [variable assingments] alu-detect <ngs_name> <reference_name>
+$ [variable assingments] ./alu-detect detect <ngs_name> <reference_name>
 
 
 <reference_name> should be previously set up as in Section 3.3. The files
@@ -460,13 +485,14 @@ Variables which affect alu-detect are:
 
 Sample command lines include:
 
-$ ORIG_MAPPINGS=map.sam.gz NCPU=30 CONF=a alu-detect NA18507 hg18
+$ ORIG_MAPPINGS=map.sam.gz NCPU=30 CONF=a ./alu-detect detect NA18507 hg18
 
 $ ORIG_READS_1=fastq/*.1.fq.gz ORIG_READS_2=fastq/*.2.fq.gz \
 ORIG_READ_GROUPS=$(for f in fastq/*.1.fq.gz; do basename $f .1.fq.gz; done) \
-INPUT_PHRED=33 NCPU=30 CONF=a alu-detect NA18507 hg18
+INPUT_PHRED=33 NCPU=30 CONF=a ./alu-detect detect NA18507 hg18
 
-$ export NCPU=30; CONF=a START_STAGE=3 END_STAGE=8 alu-detect NA18507 hg18
+$ export NCPU=30; CONF=a START_STAGE=3 END_STAGE=8 ./alu-detect detect \
+NA18507 hg18
 
 
 --------------------------------------------------------------------------------
@@ -595,6 +621,9 @@ of calls filtered using some reasonable defaults:
 - filter-weak-null 200 (i.e, 20% of max)
 - filter-ci-length 1100
 
+The filtered calls will be generated by detect, and placed in the file:
+<prefix>.<ref_name>.calls.basic-filters.bed
+
 
 7.3. Using a fake reference
 ---------------------------
@@ -624,25 +653,24 @@ Otherwise, these steps are mostly automated. To use them:
 
 - Create a fake reference using the instructions in Section 3.4 and 3.5. E.g.:
 
-$ make-fake-ref hg18 fake_hg18
-
-
 - Run detection against both the real and the fake reference. E.g.:
 
-$ NCPU=30 CONF=a ORIG_MAPPINGS=map.hg18.bam alu-detect NA18507 hg18
+$ NCPU=30 CONF=a ORIG_MAPPINGS=map.hg18.bam ./alu-detect detect NA18507 hg18
 
 $ NCPU=30 CONF=a ORIG_READS_1=reads_1.fq.gz ORIG_READS_2=reads_2.fq.gz \
-  INPUT_PHRED=33 alu-detect NA18507 fake_hg18
+  INPUT_PHRED=33 ./alu-detect detect NA18507 fake_hg18
 
 If you mapped the reads by hand to the fake reference, you can replace the
 second step by:
 
-$ NCPU=30 CONF=a ORIG_MAPPINGS=map.fake_hg18.bam alu-detect NA18507 fake_hg18
+$ NCPU=30 CONF=a ORIG_MAPPINGS=map.fake_hg18.bam ./alu-detect detect \
+  NA18507 fake_hg18
 
 
 NOTE: As explained above (*), the following is wrong:
 
-$ NCPU=30 CONF=a ORIG_MAPPINGS=map.hg18.bam alu-detect NA18507 fake_hg18
+$ NCPU=30 CONF=a ORIG_MAPPINGS=map.hg18.bam ./alu-detect detect \
+  NA18507 fake_hg18
 
 alu-detect cannot detect the conceptual error of mixing up references, and will
 not complain. But the results of doing this are undefined. (Most likely no
@@ -651,10 +679,9 @@ suitable filters will be found.)
 
 - Filter the calls on the 2 references together using the program
   filter-calls. Its arguments are: <ngs_name> <real_ref_name> <fake_ref_name>
-  <raw_calls_real_ref> <raw_calls_fake_ref>. E.g.,
+  <real_ref_calls_dir> <fake_ref_calls_dir>. E.g.,
 
-$ NCPU=30 CONF=a filter-calls NA18507 hg18 fake_hg18 \
-  NA18507.hg18.calls.raw.bed NA18507.hg18.calls.raw.bed
+$ NCPU=30 CONF=a ./alu-detect filter-calls NA18507 hg18 fake_hg18 ./ ./
 
   The program will create several files and among them, 2 filtered call files:
   NA18507.hg18.calls.filtered.bed and NA18507.fake_hg18.calls.filtered.bed.
@@ -675,10 +702,10 @@ NOTE on bash: When using bash as a shell, assignments of the form X=Y which
 precede a command are treated as assigning Y to shell variable X. Assignments
 following a command are instead passed verbatim as parameters. Thus:
 
-$ NCPU=30 alu-detect
+$ NCPU=30 ./alu-detect detect
 
 is correct, whereas
 
-$ alu-detect NCPU=30
+$ ./alu-detect detect NCPU=30
 
 is not.
